Add hero content to home page

--- a/src/index.html
+++ b/src/index.html
@@ -1,89 +1,88 @@
-<h2>Upcoming Events</h2>
-<ul class="grid md:grid-cols-2 gap-4">
-  <li class="block shadow bg-white">
-    <a class="block" target="_blank" href="https://www.eventbrite.com/e/1294900374879?aff=oddtdtcreator">
-      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399179/IMG_0498_hjcuyv.jpg">
-      <div class="p-3">
-        <h3>Mixed Pose Portrait Drawing (ADC Anniversary!)</h3>
-        <p><strong>🌟 Special one year Appleton Drawing Club anniversary party 🌟 Snacks and drinks provided. Bring a friend and your favorite drawings from the past year!</strong></p>
-        <p>Wed, 23 April 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Kelsie</p>
-        <p><em>2 for 1 tickets available! See promo at link below</em></p>
-        <button>$15 - Book here</button>
-      </div>
-    </a>
-  </li>
-  <li class="block shadow bg-white">
-    <a class="block" target="_blank" href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-movement-tickets-1298049273319?aff=oddtdtcreator">
-      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742493735/IMG_0505_sshk4e.jpg">
-      <div class="p-3">
-        <h3>Mixed Pose Life Drawing (Movement)</h3>
-        <p>Theme: a movement-based session where our model will move through a repeated set of short poses – a rare opportunity to study the moving human form</p>
-        <p>Wed, 14 May 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Cat</p>
-        <p><em>2 for 1 tickets available! See promo at link below</em></p>
-        <button>$15 - Book here</button>
-      </div>
-    </a>
-  </li>
-  <li class="block shadow bg-white">
-    <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
-      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399309/IMG_2309_git7ak.jpg">
-      <div class="p-3">
-        <h3>Mixed Pose Life Drawing</h3>
-        <p>Wed, 28 May 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Sophia</p>
-        <button>Tickets available soon</button>
-      </div>
-    <!-- </a> -->
-  </li>
-  <li class="block shadow bg-white">
-    <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
-      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1730471148/IMG_0191_afzi3o.jpg">
-      <div class="p-3">
-        <h3>Expressive Charcoal Drawing Fundamentals</h3>
-        <p>Wed, 4 June 2025<br>6:00-9:00PM<br>Richeson School of Art & Gallery</p>
-        <p>Instructor: Kevin McGillivray</p>
-        <p>Details to be announced! Enter your email to be notified about updates and registration for this class.</p>
-        <form name="charcoal-class" netlify>
-          <p>
-            <label>Email <input type="email" name="email" required /></label>
-          </p>
-          <button type="submit">Notify me</button>
-        </form>
-      </div>
-    <!-- </a> -->
-  </li>
-  <li class="block shadow bg-white">
-    <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
-      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1717362443/Mask_group_np1r8d.jpg">
-      <div class="p-3">
-        <h3>FIELD TRIP: Garden Sketching at the Paine</h3>
-        <p>Wed, 18 June 2025<br>6:00-8:00PM<br><a href="https://www.thepaine.org" target="_blank">Paine Art Center and Gardens</a></p>
-        <p>Details to be announced!</p>
-        <button>Tickets available soon</button>
-      </div>
-    <!-- </a> -->
-  </li>
-  <li class="block shadow bg-white">
-    <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
-      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742677642/IMG_0515_y7wnqk.jpg">
-      <div class="p-3">
-        <h3>Mixed Pose Life Drawing</h3>
-        <p>Wed, 25 June 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Nick</p>
-        <button>Tickets available soon</button>
-      </div>
-    <!-- </a> -->
-  </li>
-</ul>
+<div class="mb-4 p-4 max-w-5xl mx-auto">
+  <div class="max-w-prose mx-auto">
+    <h1 class="text-6xl text-center mb-4">A friendly, local life drawing community</h1>
+  </div>
+  <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/v1745845059/ADC_Portrait_20250423_023_b50vsz.jpg" alt="A group of artists drawing portraits of a model."/>
+</div>
 
-<h2 class="pt-3">Blog posts & inspiration</h2>
+<section class="container">
+  <h2 id="events">Upcoming Events</h2>
+  <ul class="grid md:grid-cols-2 gap-4">
+    <li class="block shadow bg-white">
+      <a class="block" target="_blank" href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-movement-tickets-1298049273319?aff=oddtdtcreator">
+        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742493735/IMG_0505_sshk4e.jpg">
+        <div class="p-3">
+          <h3>Mixed Pose Life Drawing (Movement)</h3>
+          <p>Theme: a movement-based session where our model will move through a repeated set of short poses – a rare opportunity to study the moving human form</p>
+          <p>Wed, 14 May 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Cat</p>
+          <p><em>2 for 1 tickets available! See promo at link below</em></p>
+          <button>$15 - Book here</button>
+        </div>
+      </a>
+    </li>
+    <li class="block shadow bg-white">
+      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399309/IMG_2309_git7ak.jpg">
+        <div class="p-3">
+          <h3>Mixed Pose Life Drawing</h3>
+          <p>Wed, 28 May 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Sophia</p>
+          <button>Tickets available soon</button>
+        </div>
+      <!-- </a> -->
+    </li>
+    <li class="block shadow bg-white">
+      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1730471148/IMG_0191_afzi3o.jpg">
+        <div class="p-3">
+          <h3>Expressive Charcoal Drawing Fundamentals</h3>
+          <p>Wed, 4 June 2025<br>6:00-9:00PM<br>Richeson School of Art & Gallery</p>
+          <p>Instructor: Kevin McGillivray</p>
+          <p>Details to be announced! Enter your email to be notified about updates and registration for this class.</p>
+          <form name="charcoal-class" netlify>
+            <p>
+              <label>Email <input type="email" name="email" required /></label>
+            </p>
+            <button type="submit">Notify me</button>
+          </form>
+        </div>
+      <!-- </a> -->
+    </li>
+    <li class="block shadow bg-white">
+      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1717362443/Mask_group_np1r8d.jpg">
+        <div class="p-3">
+          <h3>FIELD TRIP: Garden Sketching at the Paine</h3>
+          <p>Wed, 18 June 2025<br>6:00-8:00PM<br><a href="https://www.thepaine.org" target="_blank">Paine Art Center and Gardens</a></p>
+          <p>Details to be announced!</p>
+          <button>Tickets available soon</button>
+        </div>
+      <!-- </a> -->
+    </li>
+    <li class="block shadow bg-white">
+      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742677642/IMG_0515_y7wnqk.jpg">
+        <div class="p-3">
+          <h3>Mixed Pose Life Drawing</h3>
+          <p>Wed, 25 June 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Nick</p>
+          <button>Tickets available soon</button>
+        </div>
+      <!-- </a> -->
+    </li>
+  </ul>
+</section>
 
-<ul class="grid md:grid-cols-1 gap-4">
-  <li class="block shadow bg-white">
-    <a class="block" href="/posts/2025-04-12-celebrating-one-year">
-      <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_350,w_750/v1742585378/250226_ADCWildlifeDrawing_M4W_012_teyyz9.jpg" alt="Wildlife Drawing" />
-      <div class="p-3">
-        <h3>Celebrating One Year of Appleton Drawing Club</h3>
-        <p>By Kevin McGillivray • April 12, 2025</p>
-      </div>
-    </a>
-  </li>
-</ul>
+<section class="container">
+  <h2 class="pt-3">Blog posts & inspiration</h2>
+  
+  <ul class="grid md:grid-cols-1 gap-4">
+    <li class="block shadow bg-white">
+      <a class="block" href="/posts/2025-04-12-celebrating-one-year">
+        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_350,w_750/v1742585378/250226_ADCWildlifeDrawing_M4W_012_teyyz9.jpg" alt="Wildlife Drawing" />
+        <div class="p-3">
+          <h3>Celebrating One Year of Appleton Drawing Club</h3>
+          <p>By Kevin McGillivray • April 12, 2025</p>
+        </div>
+      </a>
+    </li>
+  </ul>
+</section>
