--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,27 +1,28 @@
 title: About
 ----
 
-<h1 class="text-6xl text-center mb-4">A friendly, local life drawing community</h1>
-
-<img src="https://res.cloudinary.com/db5mnmxzn/image/upload/v1742585378/250226_ADCWildlifeDrawing_M4W_012_teyyz9.jpg" alt="Wildlife Drawing" class="block mb-2" />
-
-<p>Appleton Drawing Club is a welcoming community of artists and art models who meet to draw and paint from life. We host regular sessions with a variety of models and themes open to all experience levels, as well as workshops and classes to help all artists improve their skills.</p>
-
-<p>In April 2024, we met for our first life drawing session at the Photo Opp studio in Appleton while the floors were still being installed. In the first year, we grew from monthly to twice a month sessions featuring a wide variety of figure, portrait, and wildlife drawing events.</p>
-
-<h2>About the organizer</h2>
-
-<img src="https://res.cloudinary.com/db5mnmxzn/image/upload/v1742585097/94efe12d-5c9e-44bd-bfbb-ed71bb7a4baf_rw_1920_q8jnsu.jpg" alt="Kevin McGillivray" class="rounded-full w-48 h-48 float-left mr-4 mb-2">
-
-<p>I'm Kevin McGillivray, host and organizer of Appleton Drawing Club! I'm an oil painter and charcoal artist—I started studying drawing through a practice of drawing and painting from life. A few years ago, I went to my first figure drawing session and became enchanted with the challenge and thrill of figure and portrait drawing. I haven't stopped since!</p>
-<p>After moving to Appleton in 2023, I started Appleton Drawing Club because I wanted to create an opportunity for other artists to have access to life drawing and the benefits of a creative community in a friendly, encouraging space. I'm grateful to have met so many artists and models at our events, and I hope to meet you too!</p>
-
-<h2>Join us</h2>
-
-<p>Check out our <a href="/">calendar</a> to find an upcoming session! Or, to keep up to date with our session schedule and other news, follow us on social media and sign up for our newsletter below:</p>
-
-<ul>
-  <li><a href="https://www.instagram.com/appletondrawingclub/" target="_blank">Instagram</a></li>
-  <li><a href="https://bsky.app/profile/appletondrawing.bsky.social" target="_blank">Bluesky</a></li>
-</ul>
-
+<section class="container">
+  <h1 class="text-5xl text-center mb-4">Welcome to Appleton Drawing Club!</h1>
+  
+  <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/v1742585378/250226_ADCWildlifeDrawing_M4W_012_teyyz9.jpg" alt="Wildlife Drawing" class="block mb-2" />
+  
+  <p>Appleton Drawing Club is a welcoming community of artists and art models who meet to draw and paint from life. We host regular sessions with a variety of models and themes open to all experience levels, as well as workshops and classes to help all artists improve their skills.</p>
+  
+  <p>In April 2024, we met for our first life drawing session at the Photo Opp studio in Appleton while the floors were still being installed. In the first year, we grew from monthly to twice a month sessions featuring a wide variety of figure, portrait, and wildlife drawing events.</p>
+  
+  <h2>About the organizer</h2>
+  
+  <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/v1742585097/94efe12d-5c9e-44bd-bfbb-ed71bb7a4baf_rw_1920_q8jnsu.jpg" alt="Kevin McGillivray" class="rounded-full w-48 h-48 float-left mr-4 mb-2">
+  
+  <p>I'm Kevin McGillivray, host and organizer of Appleton Drawing Club! I'm an oil painter and charcoal artist—I started studying drawing through a practice of drawing and painting from life. A few years ago, I went to my first figure drawing session and became enchanted with the challenge and thrill of figure and portrait drawing. I haven't stopped since!</p>
+  <p>After moving to Appleton in 2023, I started Appleton Drawing Club because I wanted to create an opportunity for other artists to have access to life drawing and the benefits of a creative community in a friendly, encouraging space. I'm grateful to have met so many artists and models at our events, and I hope to meet you too!</p>
+  
+  <h2>Join us</h2>
+  
+  <p>Check out our <a href="/">calendar</a> to find an upcoming session! Or, to keep up to date with our session schedule and other news, follow us on social media and sign up for our newsletter below:</p>
+  
+  <ul>
+    <li><a href="https://www.instagram.com/appletondrawingclub/" target="_blank">Instagram</a></li>
+    <li><a href="https://bsky.app/profile/appletondrawing.bsky.social" target="_blank">Bluesky</a></li>
+  </ul>
+</section>
