--- a/src/pages/calendar.html
+++ b/src/pages/calendar.html
@@ -5,6 +5,7 @@ title: Calendar
 
 <h2 class="pt-3">Past Events</h2>
 <ul>
+  <li><a href="https://www.eventbrite.com/e/1294900374879?aff=oddtdtcreator">Mixed Pose Portrait Drawing (ADC Anniversary!) - Wed, 23 April 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
   <li><a href="https://www.eventbrite.com/e/1294896533389?aff=oddtdtcreator">Mixed Pose Life Drawing (April Flowers) - Wed, 9 April 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
   <li><a href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 26 March 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
   <li><a href="https://www.eventbrite.com/e/1122263172359?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 12 March 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
