--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -1,21 +1,23 @@
 title: Contact
 ----
 
-<h1>Contact us</h1>
+<section class="container">
+  <h1>Contact us</h1>
 
-<p>Have a question or comment? Send us a message!</p>
+  <p>Have a question or comment? Send us a message!</p>
 
-<form name="contact" netlify>
-  <p>
-    <label>Name <input type="text" name="name" /></label>
-  </p>
-  <p>
-    <label>Email <input type="email" name="email" /></label>
-  </p>
-  <p>
-    <label>Message <textarea name="message"></textarea></label>
-  </p>
-  <p>
-    <button type="submit">Send message</button>
-  </p>
-</form>
+  <form name="contact" netlify>
+    <p>
+      <label>Name <input type="text" name="name" /></label>
+    </p>
+    <p>
+      <label>Email <input type="email" name="email" /></label>
+    </p>
+    <p>
+      <label>Message <textarea name="message"></textarea></label>
+    </p>
+    <p>
+      <button type="submit">Send message</button>
+    </p>
+  </form>
+</section>
