--- a/src/pages/faq.html
+++ b/src/pages/faq.html
@@ -1,78 +1,80 @@
 title: Frequently Asked Questions
 ----
 
-<h1>Frequently Asked Questions</h1>
+<section class="container">
+  <h1>Frequently Asked Questions</h1>
 
-<h2>What is life drawing?</h2>
+  <h2>What is life drawing?</h2>
 
-<p>
-  Life drawing is the practice of drawing or painting from a live model. Life drawing takes many forms, from quick gesture drawings to longer poses, and exercises a wide range of art skills and techniques. Life drawing is often practiced with an unclothed model, but sessions also feature clothed models, portrait models, animals, and other subjects.
-</p>
+  <p>
+    Life drawing is the practice of drawing or painting from a live model. Life drawing takes many forms, from quick gesture drawings to longer poses, and exercises a wide range of art skills and techniques. Life drawing is often practiced with an unclothed model, but sessions also feature clothed models, portrait models, animals, and other subjects.
+  </p>
 
-<h2>Do I need to become a member to attend an Appleton Drawing Club session?</h2>
+  <h2>Do I need to become a member to attend an Appleton Drawing Club session?</h2>
 
-<p>
-  If you attend a session, you are a member! No need to sign up or do anything special to join. Just join us and draw!
-</p>
+  <p>
+    If you attend a session, you are a member! No need to sign up or do anything special to join. Just join us and draw!
+  </p>
 
-<h2>Do I need experience to attend?</h2>
+  <h2>Do I need experience to attend?</h2>
 
-<p>
-  Not at all! We welcome people of all skill levels and backgrounds. Whether you're a seasoned pro or have never drawn before, you're welcome to join us. If a workshop or session is geared toward a specific skill level, we'll make sure to note that in the event description.
-</p>
+  <p>
+    Not at all! We welcome people of all skill levels and backgrounds. Whether you're a seasoned pro or have never drawn before, you're welcome to join us. If a workshop or session is geared toward a specific skill level, we'll make sure to note that in the event description.
+  </p>
 
-<h2>What should I expect at a session?</h2>
+  <h2>What should I expect at a session?</h2>
 
-<p>
-  Session formats vary, and the event description will provide details about the model, poses, and any special themes or activities. In general, you can expect a relaxed, friendly, focused atmosphere where you can draw, paint, or create in the medium of your choice. You can expect to meet other artists, share your work, and enjoy a supportive and creative environment.
-</p>
+  <p>
+    Session formats vary, and the event description will provide details about the model, poses, and any special themes or activities. In general, you can expect a relaxed, friendly, focused atmosphere where you can draw, paint, or create in the medium of your choice. You can expect to meet other artists, share your work, and enjoy a supportive and creative environment.
+  </p>
 
-<p>
-  As an example, a standard figure drawing session will follow this format:
-</p>
+  <p>
+    As an example, a standard figure drawing session will follow this format:
+  </p>
 
-<ul class="bullet">
-  <li>Pre-session: find a spot and set up your materials!</li>
-  <li>Welcome and introduction</li>
-  <li>First set: Gesture warm-up poses (1-5 minutes)</li>
-  <li>Second set: Medium poses (10-15 minutes)</li>
-  <li>Third set: Longer poses (25-45 minutes)</li>
-  <li>Breaks every 20-30 minutes</li>
-  <li>Clean up and share your work!</li>
-</ul>
+  <ul class="bullet">
+    <li>Pre-session: find a spot and set up your materials!</li>
+    <li>Welcome and introduction</li>
+    <li>First set: Gesture warm-up poses (1-5 minutes)</li>
+    <li>Second set: Medium poses (10-15 minutes)</li>
+    <li>Third set: Longer poses (25-45 minutes)</li>
+    <li>Breaks every 20-30 minutes</li>
+    <li>Clean up and share your work!</li>
+  </ul>
 
-<h2>What is the etiquette during a session?</h2>
+  <h2>What is the etiquette during a session?</h2>
 
-<p>
-  Our sessions have a <a href="/code-of-conduct">code of conduct</a> to ensure a safe and respectful environment for models and artists alike. Please review the code of conduct before attending a session.
-</p>
+  <p>
+    Our sessions have a <a href="/code-of-conduct">code of conduct</a> to ensure a safe and respectful environment for models and artists alike. Please review the code of conduct before attending a session.
+  </p>
 
-<h2>What should I bring to a session?</h2>
+  <h2>What should I bring to a session?</h2>
 
-<p>
-  Bring any of your preferred art supplies. This could be a sketchbook and pencils, charcoal, pastels, or whatever you like to use. If you're new to drawing, a simple sketchbook and a few pencils are a great place to start. We often have basic drawing paper and pencils available at the session if you need some, but it's a good idea to bring your own. Soon we also hope to provide plenty of large easels, but for now we recommend bringing your own easel or drawing board.
-</p>
+  <p>
+    Bring any of your preferred art supplies. This could be a sketchbook and pencils, charcoal, pastels, or whatever you like to use. If you're new to drawing, a simple sketchbook and a few pencils are a great place to start. We often have basic drawing paper and pencils available at the session if you need some, but it's a good idea to bring your own. Soon we also hope to provide plenty of large easels, but for now we recommend bringing your own easel or drawing board.
+  </p>
 
-<h2>Can I use other media like oil, watercolors, or digital tools?</h2>
+  <h2>Can I use other media like oil, watercolors, or digital tools?</h2>
 
-<p>
-  Yes! As long as your setup doesn’t disrupt others, you’re free to use the medium of your choice. Just be sure to clean up any mess from your supplies and respect the space.
-</p>
+  <p>
+    Yes! As long as your setup doesn’t disrupt others, you’re free to use the medium of your choice. Just be sure to clean up any mess from your supplies and respect the space.
+  </p>
 
-<h2>Is there an instructor?</h2>
+  <h2>Is there an instructor?</h2>
 
-<p>
-  Our regular sessions are uninstructed but we plan to offer workshops and classes in the future. Artists frequently help each other and share tips and techniques during the session.
-</p>
+  <p>
+    Our regular sessions are uninstructed but we plan to offer workshops and classes in the future. Artists frequently help each other and share tips and techniques during the session.
+  </p>
 
-<h2>Can I pay by cash?</h2>
+  <h2>Can I pay by cash?</h2>
 
-<p>
-  Yes, we accept cash at the door for sessions that require payment. However, we appreciate if you can pay online in advance via our website to help us plan the session. You can also RSVP online and select cash as a payment option ahead of time!
-</p>
+  <p>
+    Yes, we accept cash at the door for sessions that require payment. However, we appreciate if you can pay online in advance via our website to help us plan the session. You can also RSVP online and select cash as a payment option ahead of time!
+  </p>
 
-<h2>I'm interested in modeling, how can I get started?</h2>
+  <h2>I'm interested in modeling, how can I get started?</h2>
 
-<p>
-  We're always looking for new models! Check out our <a href="/modeling">modeling page</a> for more information and to share your interest.
-</p>
+  <p>
+    We're always looking for new models! Check out our <a href="/modeling">modeling page</a> for more information and to share your interest.
+  </p>
+</section>
