--- a/src/pages/modeling.html
+++ b/src/pages/modeling.html
@@ -1,4 +1,9 @@
 title: For Models
 ----
 
-<iframe class="airtable-embed" src="https://airtable.com/embed/appZ8b20NKIBuFhjp/pagyBYKR6NPwNFFMY/form" frameborder="0" onmousewheel="" width="100%" height="750" style="background: transparent; border: 1px solid #ccc;"></iframe>
+<section class="container">
+  <h1>For Models</h1>
+  <p>Appleton Drawing Club is always looking for models for our life drawing sessions. If you are interested in modeling, please fill out the form below.</p>
+  <p>If you have any questions about modeling, please <a href="/contact">contact us</a>.</p>
+  <iframe class="airtable-embed" src="https://airtable.com/embed/appZ8b20NKIBuFhjp/pagyBYKR6NPwNFFMY/form" frameborder="0" onmousewheel="" width="100%" height="750" style="background: transparent; border: 1px solid #ccc;"></iframe>
+</section>
