--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,7 @@
       <h1><a href="/">Appleton Drawing Club</a></h1>
       <nav class="mb-3">
         <ul class="flex gap-3">
-          <li><a href="/">Events</a></li>
+          <li><a href="/#events">Events</a></li>
           <li><a href="/modeling">For models</a></li>
           <li><a href="/faq">FAQs</a></li>
           <li><a href="/about">About</a></li>
@@ -26,13 +26,13 @@
         {{ content }}
     </section>
 
-    <section>
+    <section class="container">
       <h2>About Appleton Drawing Club</h2>
       <p>Appleton Drawing Club is a group of artists who meet regularly to draw from life. We welcome artists of all skill levels and backgrounds. We are dedicated to providing a safe and respectful environment for models and artists alike.</p>
       <p><a href="/about">Read more about Appleton Drawing Club</a></p>
       <p><a target="_blank" href="https://www.instagram.com/appletondrawingclub/">Follow Appleton Drawing Club on Instagram</a></p>
     </section>
-    <section>
+    <section class="container">
       <h2>Newsletter</h2>
       <p>Sign up for our newsletter to be notified about upcoming events and local drawing news.</p>
       <form
@@ -54,7 +54,7 @@
     <footer>
       <nav class="mb-3">
         <ul class="md:flex gap-3">
-          <li><a href="/">Events</a></li>
+          <li><a href="/#events">Events</a></li>
           <li><a href="/modeling">For models</a></li>
           <li><a href="/faq">FAQs</a></li>
           <li><a href="/code-of-conduct">Code of conduct</a></li>
