Add private events page

--- a/src/pages/code-of-conduct.html
+++ b/src/pages/code-of-conduct.html
@@ -2,7 +2,7 @@ title: Life Drawing Code of Conduct
 ----
 
 <section class="container">
-  <h1>Life Drawing Code of Conduct</h1>
+  <h1 class="text-5xl text-center mb-4">Life Drawing Code of Conduct</h1>
   
   <p>Appleton Drawing Club is dedicated to providing a safe and respectful environment for models and artists alike. We expect all participants to adhere to the following code of conduct:</p>
   
