--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -2,9 +2,12 @@ title: Contact
 ----
 
 <section class="container">
-  <h1>Contact us</h1>
+  <h1 class="text-5xl text-center mb-4">Contact Us</h1>
 
   <p>Have a question or comment? Send us a message!</p>
+
+  <p>If you're interested in being an art model, <a href="/modeling">let us know here</a>.</p>
+  <p>If you're interested in booking a private event, please fill out the form on the <a href="/private-events">private events</a> page.</p>
 
   <form name="contact" netlify>
     <p>
