--- a/src/index.html
+++ b/src/index.html
@@ -31,21 +31,14 @@
       <!-- </a> -->
     </li>
     <li class="block shadow bg-white">
-      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+      <a class="block" href="/expressive-charcoal-fundamentals">
         <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1730471148/IMG_0191_afzi3o.jpg">
         <div class="p-3">
           <h3>Expressive Charcoal Drawing Fundamentals</h3>
-          <p>Wed, 4 June 2025<br>6:00-9:00PM<br>Richeson School of Art & Gallery</p>
-          <p>Instructor: Kevin McGillivray</p>
-          <p>Details to be announced! Enter your email to be notified about updates and registration for this class.</p>
-          <form name="charcoal-class" netlify>
-            <p>
-              <label>Email <input type="email" name="email" required /></label>
-            </p>
-            <button type="submit">Notify me</button>
-          </form>
+          <p>Wed, 11 June 2025<br>6:00-9:00PM<br>Richeson School of Art & Gallery<br>Instructor: Kevin McGillivray</p>
+          <button>Details and registration</button>
         </div>
-      <!-- </a> -->
+      </a>
     </li>
     <li class="block shadow bg-white">
       <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
