--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,14 @@
       </a>
     </li>
     <li class="block shadow bg-white">
-      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+      <a class="block" target="_blank" href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-may-28-2025-tickets-1353280882549?aff=oddtdtcreator">
         <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399309/IMG_2309_git7ak.jpg">
         <div class="p-3">
           <h3>Mixed Pose Life Drawing</h3>
           <p>Wed, 28 May 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Sophia</p>
-          <button>Tickets available soon</button>
+          <button>$15 - Book here</button>
         </div>
-      <!-- </a> -->
+      </a>
     </li>
     <li class="block shadow bg-white">
       <a class="block" href="/expressive-charcoal-fundamentals">
