--- a/src/pages/expressive-charcoal-fundamentals.html
+++ b/src/pages/expressive-charcoal-fundamentals.html
@@ -14,6 +14,7 @@ title: About
       <li>Materials<br><strong>All materials included</strong></li>
       <li>Tuition<br><strong>$60</strong></li>
     </ul>
+    <a target="_blank" href="https://richesongallery.com/expressive-charcoal-drawing-fundamentals/"><button class="font-bold uppercase">Register at Richeson Gallery</button></a>
   </div>
 
   <h2>About the class</h2>
@@ -29,23 +30,16 @@ title: About
 
   <p>In my classes, I aim to create a welcoming, encouraging space for artists of all levels, whether you're new to charcoal or returning to drawing after some time away. I focus on exercises for your hands, eyes, mind, and heart to develop fluency in foundational drawing skills as well as your own artistic vision and creative practice. I hope you will join us, and I look forward to drawing with you!</p>
 
-  <ul>
-    <li><a target="_blank" href="https://www.instagram.com/kev_mcg/">Instagram</a></li>
-    <li><a target="_blank" href="https://studio.kevinmcgillivray.net">Website</a></li>
-  </ul>
+  <p>
+    <a target="_blank" href="https://www.instagram.com/kev_mcg/">Instagram</a> | 
+    <a target="_blank" href="https://studio.kevinmcgillivray.net">Website</a>
+  </p>
+
+  <div class="text-center py-6">
+    <a target="_blank" href="https://richesongallery.com/expressive-charcoal-drawing-fundamentals/"><button class="text-xl px-6 py-4 font-bold uppercase">Register at Richeson Gallery</button></a>
+  </div>
 
   <img class="my-4" src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_auto,h_970,w_970/c_scale/v1742399413/IMG_3675_oewd2t.jpg" />
-
-  <div class="bg-white p-4 rounded shadow my-4">
-    <h2>Join the class</h2>
-    <p>Registration available soon! Enter your email below to be notified when registration is open.</p>
-    <form name="charcoal-class" netlify>
-      <p>
-        <label>Email <input type="email" name="email" required /></label>
-      </p>
-      <button type="submit">Notify me</button>
-    </form>
-  </div>
 
   <hr class="block my-8" />
 </section>
