--- a/src/index.html
+++ b/src/index.html
@@ -29,15 +29,14 @@
       </a>
     </li>
     <li class="block shadow bg-white">
-      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+      <a class="block" target="_blank" href="https://www.eventbrite.com/e/garden-sketching-at-the-paine-art-center-tickets-1370022597469?aff=oddtdtcreator">
         <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1717362443/Mask_group_np1r8d.jpg">
         <div class="p-3">
           <h3>FIELD TRIP: Garden Sketching at the Paine</h3>
-          <p>Wed, 18 June 2025<br>6:00-8:00PM<br><a href="https://www.thepaine.org" target="_blank">Paine Art Center and Gardens</a></p>
-          <p>Details to be announced!</p>
-          <button>Tickets available soon</button>
+          <p>Wed, 18 June 2025<br>6:00-8:00PM<br>Paine Art Center and Gardens</p>
+          <button>$15 - Book here</button>
         </div>
-      <!-- </a> -->
+      </a>
     </li>
     <li class="block shadow bg-white">
       <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
