--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,16 @@
     </li>
     <li class="block shadow bg-white">
       <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1746018975/IMG_5345_1_viilbm.jpg">
+        <div class="p-3">
+          <h3>Portrait Club: Draw Each Other!</h3>
+          <p>Wed, 9 July 2025<br>7:00-9:00PM<br>Commodore Club</p>
+          <button>Free event - available soon</button>
+        </div>
+      <!-- </a> -->
+    </li>
+    <li class="block shadow bg-white">
+      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
         <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1730471148/IMG_0191_afzi3o.jpg">
         <div class="p-3">
           <h3>New Events</h3>
@@ -50,7 +60,7 @@
     </li>
     <li class="block shadow bg-white">
       <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
-        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1730471148/IMG_0191_afzi3o.jpg">
+        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399413/IMG_3675_oewd2t.jpg">
         <div class="p-3">
           <h3>New Events</h3>
           <p>August</p>
@@ -60,7 +70,7 @@
     </li>
     <li class="block shadow bg-white">
       <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
-        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1730471148/IMG_0191_afzi3o.jpg">
+        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727284714/IMG_0327_xeu9bj.jpg">
         <div class="p-3">
           <h3>New Events</h3>
           <p>September</p>
