--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,8 @@
       <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
         <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1730471148/IMG_0191_afzi3o.jpg">
         <div class="p-3">
-          <h3>New Events</h3>
-          <p>July</p>
+          <h3>Mixed Pose Life Drawing</h3>
+          <p>Wed, 16 July 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: TBD</p>
           <button>Coming soon!</button>
         </div>
       <!-- </a> -->
