--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,8 @@
       <a class="block" target="_blank" href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-june-25-2025-tickets-1401844347179?aff=oddtdtcreator">
         <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742677642/IMG_0515_y7wnqk.jpg">
         <div class="p-3">
-          <h3>Mixed Pose Life Drawing</h3>
+          <h3>Mixed Pose Life Drawing: Theseus</h3>
+          <p>Theme: Myths and legends</p>
           <p>Wed, 25 June 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Nick</p>
           <button>$15 - Book here</button>
         </div>
