--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,6 @@
   <h2 id="events">Upcoming Events</h2>
   <ul class="grid md:grid-cols-2 gap-4">
     <li class="block shadow bg-white">
-      <a class="block" href="/expressive-charcoal-fundamentals">
-        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1730471148/IMG_0191_afzi3o.jpg">
-        <div class="p-3">
-          <h3>Expressive Charcoal Drawing Fundamentals</h3>
-          <p>Wed, 11 June 2025<br>6:00-9:00PM<br>Richeson School of Art & Gallery<br>Instructor: Kevin McGillivray</p>
-          <button>Details and registration</button>
-        </div>
-      </a>
-    </li>
-    <li class="block shadow bg-white">
       <a class="block" target="_blank" href="https://www.eventbrite.com/e/garden-sketching-at-the-paine-art-center-tickets-1370022597469?aff=oddtdtcreator">
         <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1717362443/Mask_group_np1r8d.jpg">
         <div class="p-3">
@@ -51,30 +41,50 @@
     </li>
     <li class="block shadow bg-white">
       <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
-        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1730471148/IMG_0191_afzi3o.jpg">
+        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727289295/IMG_0309_l7lv9x.jpg">
         <div class="p-3">
           <h3>Mixed Pose Life Drawing</h3>
-          <p>Wed, 16 July 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: TBD</p>
+          <p>Wed, 16 July 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Ashley</p>
           <button>Coming soon!</button>
         </div>
       <!-- </a> -->
     </li>
     <li class="block shadow bg-white">
       <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
-        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399413/IMG_3675_oewd2t.jpg">
+        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1730471148/IMG_0191_afzi3o.jpg">
         <div class="p-3">
-          <h3>New Events</h3>
-          <p>August</p>
+          <h3>To Be Announced</h3>
+          <p>Sun, 10 August 2025<br>10:00AM-12:00PM<br>The Photo Opp Studio</p>
           <button>Coming soon!</button>
         </div>
       <!-- </a> -->
     </li>
     <li class="block shadow bg-white">
       <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
-        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727284714/IMG_0327_xeu9bj.jpg">
+        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1703199034/IMG_8034_ab2tov.jpg">
         <div class="p-3">
-          <h3>New Events</h3>
-          <p>September</p>
+          <h3>Mixed Pose Life Drawing</h3>
+          <p>Wed, 27 August 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: David</p>
+          <button>Coming soon!</button>
+        </div>
+      <!-- </a> -->
+    </li>
+    <li class="block shadow bg-white">
+      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1725293285/IMG_0262_aaxson.jpg">
+        <div class="p-3">
+          <h3>Mixed Pose Life Drawing</h3>
+          <p>Wed, 10 September 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Glenn</p>
+          <button>Coming soon!</button>
+        </div>
+      <!-- </a> -->
+    </li>
+    <li class="block shadow bg-white">
+      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399179/IMG_0498_hjcuyv.jpg">
+        <div class="p-3">
+          <h3>To Be Announced</h3>
+          <p>Wed, 24 September 2025<br>7:00-9:00PM<br>FSM Art House<br>Model: TBD</p>
           <button>Coming soon!</button>
         </div>
       <!-- </a> -->
