Update event link

--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,14 @@
       </a>
     </li>
     <li class="block shadow bg-white">
-      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+      <a class="block" target="_blank" href="https://www.eventbrite.com/e/portrait-club-draw-each-other-tickets-1429398000899">
         <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1746018975/IMG_5345_1_viilbm.jpg">
         <div class="p-3">
           <h3>Portrait Club: Draw Each Other!</h3>
           <p>Wed, 9 July 2025<br>7:00-9:00PM<br>Commodore Club</p>
-          <button>Free event - available soon</button>
+          <button>Free event - Book here</button>
         </div>
-      <!-- </a> -->
+      </a>
     </li>
     <li class="block shadow bg-white">
       <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
