Update event link

--- a/src/index.html
+++ b/src/index.html
@@ -30,14 +30,14 @@
       </a>
     </li>
     <li class="block shadow bg-white">
-      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+      <a class="block" target="_blank" href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-july-16-2025-tickets-1429403407069">
         <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727289295/IMG_0309_l7lv9x.jpg">
         <div class="p-3">
           <h3>Mixed Pose Life Drawing</h3>
           <p>Wed, 16 July 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Ashley</p>
-          <button>Coming soon!</button>
+          <button>$15 - Book here</button>
         </div>
-      <!-- </a> -->
+      </a>
     </li>
     <li class="block shadow bg-white">
       <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
