Move June 25 figure drawing event from home page to calendar
- Removed completed 'Mixed Pose Life Drawing: Theseus' event from upcoming events on home page
- Added event to top of Past Events list on calendar page with full details
- Event date: June 25, 2025 - Model: Nick - Theme: Myths and legends

--- a/src/pages/calendar.html
+++ b/src/pages/calendar.html
@@ -5,6 +5,7 @@ title: Calendar
 
 <h2 class="pt-3">Past Events</h2>
 <ul>
+  <li><a href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-june-25-2025-tickets-1401844347179?aff=oddtdtcreator">Mixed Pose Life Drawing: Theseus - Wed, 25 June 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Nick<br>Theme: Myths and legends</a></li>
   <li><a href="https://www.eventbrite.com/e/garden-sketching-at-the-paine-art-center-tickets-1370022597469?aff=oddtdtcreator">Field Trip: Garden Sketching at the Paine - Wed, 18 June 2025<br>6:00-8:00PM<br>Paine Art Center and Gardens</a></li>
   <li><a href="#">Expressive Charcoal Drawing Fundamentals - Wed, 11 June 2025<br>6:00-9:00PM<br>Richeson School of Art & Gallery<br>Instructor: Kevin McGillivray</a></li>
   <li><a href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-may-28-2025-tickets-1353280882549?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 28 May 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
