--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
   <h2 id="events">Upcoming Events</h2>
   <ul class="grid md:grid-cols-2 gap-4">
     <li class="block shadow bg-white">
-      <a class="block" target="_blank" href="https://www.eventbrite.com/e/portrait-club-draw-each-other-tickets-1429398000899">
+      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/portrait-club-draw-each-other-tickets-1429398000899"> -->
         <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1746018975/IMG_5345_1_viilbm.jpg">
         <div class="p-3">
           <h3>Portrait Club: Draw Each Other!</h3>
           <p>Wed, 9 July 2025<br>7:00-9:00PM<br>Commodore Club</p>
-          <button>Free event - Book here</button>
+          <button disabled>No tickets available</button>
         </div>
-      </a>
+      <!-- </a> -->
     </li>
     <li class="block shadow bg-white">
       <a class="block" target="_blank" href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-july-16-2025-tickets-1429403407069">
